fix smooth-scroll on mobile

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -10,5 +10,6 @@
     display initial
     visibility initial
 
+html,
 [role=main]
     scroll-behavior smooth
